@@ -2325,7 +2325,9 @@ void Shape_chooser::locate
 		return;			// Shouldn't happen.
 	unsigned char data[Exult_server::maxlength];
 	unsigned char *ptr = &data[0];
+	int qual = ExultStudio::get_num_entry(get_loc_q());
 	Write2(ptr, info[selected].shapenum);
+	Write2(ptr, qual == -1 ? c_any_qual : qual);
 	*ptr++ = upwards ? 1 : 0;
 	ExultStudio *studio = ExultStudio::get_instance();
 	studio->send_to_server(
@@ -2521,7 +2523,7 @@ Shape_chooser::Shape_chooser
 				GTK_SIGNAL_FUNC(all_frames_toggled), this);
 					// Add search controls to bottom.
 	gtk_box_pack_start(GTK_BOX(vbox), 
-		create_controls(find_controls | locate_controls),
+		create_controls(find_controls|locate_controls|locate_quality),
 						FALSE, FALSE, 0);
 	}
 
